--- a/Ejercicio4.EF.MVC/Ejercicio4.EF.MVC.csproj
+++ b/Ejercicio4.EF.MVC/Ejercicio4.EF.MVC.csproj
@@ -55,6 +55,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -207,6 +209,9 @@
       <Project>{1C17D485-FB1C-42CC-B4F3-1A0D865EB0ED}</Project>
       <Name>Ejercicio4.EF.Logic</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
