--- a/Ejercicio4.EF.WebApi/Views/Web.config
+++ b/Ejercicio4.EF.WebApi/Views/Web.config
@@ -17,7 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="Ejercicio4.EF.WebApi" />
+        <add namespace="Ejercicio4.EF.WebAPI" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
